--- a/index.html
+++ b/index.html
@@ -1,22 +1,15 @@
 init
-一些demo经常放到github上进行托管, 打开直接是源代码，看不到效果。怎么直接看效果不用下载？ 
-方法一、 
-将github上demo的html文件链接复制到，打开下面网址后出现的输入栏中，点击按钮即可。
-
-http://htmlpreview.github.io/
-1
-GitHub & BitBucket HTML Preview 
-
-
-方法二、在HTML文件的地址前面加上htmlpreview.github.io/?
+<p>
+  
+ 一些demo经常放到github上进行托管, 打开直接是源代码，看不到效果。怎么直接看效果不用下载？ 
+方法
+在HTML文件的地址前面加上htmlpreview.github.io/?
 
 htmlpreview.github.io/?文件地址
-1
-https://fordtin.github.io/仓库名/文件地址 
-方法三、
+ 
+ 
 
-在github上demo的仓库页面，点击“setting”按钮；
 
-找到GitHub Pages版块，选择Source为“master branch”，然后保存（或者在Theme Chooser处，点击Change theme，进入页面后选择主题保存，这样也可以）；
 
-页面会出现一个新链接，在链接后面加上demo的HTML文件名，即可跳转到demo显示的页面。
+
+</p>
