--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
 init
 <p>
-  
  一些demo经常放到github上进行托管, 打开直接是源代码，看不到效果。怎么直接看效果不用下载？ 
 方法
 在HTML文件的地址前面加上htmlpreview.github.io/?
-
 htmlpreview.github.io/?文件地址
- 
- 
-
-
-
-
 </p>
+
+<P>
+  折纸爱心教程
+  https://www.youtube.com/watch?v=a9PVJTzkj5E
+  </p>
