--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-init
 
 
 <!DOCTYPE html>
@@ -8,19 +7,20 @@ init
     <title>一直喜欢你的小房同学</title>
     <link rel="stylesheet" type="text/css" href="style002.css">
     <script>
-        function Click(){
+            function Click(){
             document.getElementById("ClickDo").style.color="sky-blue";
         }
 
     </script>
 </head>
 <body>
-    <h1>这是小房的秘密基地</h1>
+    <h1>这里是小房的秘密基地</h1>
     <div class="first-1">
-        <h1>HELLO</h1>
-        <h4>作者：小房同学</h4>
+        <h4>1、GitHub直接网页化</h4>
         <p> 一些demo经常放到github上进行托管, 打开直接是源代码，看不到效果。怎么直接看效果不用下载？ 方法：在HTML文件的地址前面加上htmlpreview.github.io/? 即 htmlpreview.github.io/?文件地址 </p>
-        <p>   折纸爱心教程：  https://www.youtube.com/watch?v=a9PVJTzkj5E  </p>
+     
+        <h4>2、折纸爱心</h4>
+        <p> 折纸爱心教程：  https://www.youtube.com/watch?v=a9PVJTzkj5E  </p>
  
 
 
